--- a/CV.html
+++ b/CV.html
@@ -4,15 +4,15 @@
   <body>
     <header>
         <div class="container">
-            <div class= ><h1> <a target= "_blank" href="CV.html">PRATIKSHA POUDEL </a></h1>
+            <div class= "My"><h1> <a target= "_blank" href="CV.html">PRATIKSHA POUDEL </a></h1>
                     <p id= "me">MSc. Global Health Student</p>
                     
                 </div>
         
         <ul>
             <li> <a href="profile.html"> About me</a></li>
-            <li><a href="Skill.html"> skills </a></li>
-            <li><a href="training.html">Education </a></li>
+            <li> <a href="Skill.html"> skills </a></li>
+            <li> <a href="training.html">Education </a></li>
             </ul>
         </div>
     </header>
