--- a/profile.html
+++ b/profile.html
@@ -51,6 +51,11 @@
                     <a href="https://www.linkedin.com/feed/"> <img class="signs" src= "image/iconfinder_linkedin_1147411.png" alt="linkedin" width=50px></a>
                     <h4 class="fothead">Follow me</h4> 
                 </div>
+                <div class="box">
+                    <img class="signs" src= "image/iconfinder_Marker_2190978.png" alt="linkedin" width=50px></a>
+                   <h4 class="fothead">Post me</h4> 
+                   <p>Snogegårdsvej, 142 2th, 2860 Søborg</p>
+               </div>
               
       </footer>    
       
